# fastapi_profiler

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  appveyor.yaml  appveyor.yml  fastapi-profiler.json  make.bat  pyproject.toml  requirements.txt  setup.py  test.py  test.sh
.github/workflows/: python-app.yml  release.yml
example/: fastapi_always_profile_errors_example.py  fastapi_cpu_and_memory_profiler_example.py  fastapi_example.py  fastapi_full_features_example.py  fastapi_json_logging_example.py  fastapi_memory_autostart_example.py  fastapi_memory_custom_path_example.py  fastapi_memory_memray_client_example.py  fastapi_memory_profiler_example.py  fastapi_memory_tracemalloc_client_example.py  fastapi_per_route_history_example.py  fastapi_runtime_toggle_example.py  fastapi_sampling_rate_example.py  fastapi_stats_dashboard_example.py  fastapi_to_html_example.py  fastapi_to_json_example.py  fastapi_to_prof_example.py  fastapi_to_speedscope_example.py
fastapi_profiler/: __init__.py  _version.py  dashboard.py  memory_dashboard.py  memory_middleware.py  profiler.py  stats.py
fastapi_profiler/memory/: __init__.py  memray_profiler.py  tracemalloc_profiler.py
fastapi_profiler/profiler_middleware/: __init__.py  profiler.py
test/: requirements.txt  test_dashboard.py  test_memory.py  test_memory_coverage.py  test_middleware.py  test_stats.py
